--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@types/react": "^18.2.14",
     "next": "^13.4.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-imask": "^7.1.2",
+    "use-imask": "^2.0.0"
   },
   "name": "wiregate_test",
   "version": "1.0.0",
