add switch ssr and spa via env variable

--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,4 @@
 COMPANY_EMAIL=Help@worktime.com
-INPUTNAME_NAME=userName
-INPUTNAME_SURNAME=lastName
-INPUTNAME_ADDRESS=companyAddress
-INPUTNAME_PASSWORD=password
-INPUTNAME_COMPANY=company
-INPUTNAME_PHONE=phoneNumber
+
+# accept types: SSR, SPA
+RENDER_TYPE=SPA
